cli/tests/snapshot/inputs/errors/json_error_location.ncl
# capture = 'stderr'
# command = ['eval']
(import "../../imports/map.json") | { foo : Number, bar : String }
